# gnssplusplus-library

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  CODEX_TASK.md  CODEX_TASK_GAP1_v2.md  CODEX_TASK_GF_REPAIR.md  CODEX_TASK_OSR_COMPARE.md  CODEX_TASK_RESIDUAL_FIX.md  CONTRIBUTING.md  CURSOR_TASK.md  Dockerfile  LICENSE  LICENSE-third-party.md  NOTICE  PLAN.md  README.md  compose.yaml  mkdocs.yml  requirements-docs.txt  test_ssr2obs_dump.sh
.github/: PULL_REQUEST_TEMPLATE.md
apps/: CMakeLists.txt  claslib_wrapper.c  gnss.cmd  gnss.py  gnss_artifact_manifest.py  gnss_binex_info.py  gnss_clas_ppp.py  gnss_compare  gnss_convert.cpp  gnss_dcb_info.py  gnss_dd_residuals.py  gnss_dd_residuals_filtering.py  gnss_dd_residuals_html.py  gnss_dd_residuals_io.py  gnss_dd_residuals_records.py  gnss_dd_residuals_statistics.py  gnss_dd_residuals_summary.py  gnss_doctor.py  gnss_fetch_products.py  gnss_fgo.cpp  gnss_field_report.py  gnss_ionex_info.py  gnss_live.cpp  gnss_live_signoff.py  gnss_mode_compare.py  gnss_moving_base_plot.py  gnss_moving_base_prepare.py  gnss_moving_base_signoff.py  gnss_nav_products.cpp  gnss_nmea_info.py  gnss_novatel_info.py  gnss_odaiba_benchmark.py  gnss_odaiba_scan.py  gnss_plot  gnss_pos2kml  gnss_pos_pd.cpp  gnss_pos_pdc.cpp  gnss_pos_vel_pd.cpp  gnss_pos_vel_pdc.cpp  gnss_ppc_commercial.py  (+59 more)
cmake/: Doxyfile.in  libgnss++Config.cmake.in  libgnsspp.pc.in  libgnssppConfig.cmake.in
configs/: iers_atl_multisite_smoke.example.json  iers_atl_multisite_vmf.example.json  live.example.conf  live_signoff.example.toml  moving_base_signoff.example.toml  ppc_rtk_signoff.example.toml  ppc_sigma_demote_nis2_ratio4.toml  ppc_spp_policy_suite.adaptive3_policy1.example.json  ppp_products_ppc.example.toml  web.example.toml
docs/: architecture.md  benchmarks.md  clas-ppp-implementation-plan.md  clas-ppp-refactoring-plan.md  clas.md  clas_compact_ssr_policies.md  clas_dd_filter_a1.md  clas_dd_filter_a2.md  clas_dd_filter_a3.md  clas_dd_filter_a4.md  clas_dd_filter_a5.md  clas_dd_filter_audit.md  clas_debug_playbook.md  clas_parity_artifacts.md  clas_parity_blockers.md  clas_port_architecture.md  clas_quickstart.md  clas_validated_datasets.md  contributing.md  dataset_gallery.md  decisions.md  experiments.md  iers-integration-plan.md  index.md  interfaces.md  madoca_port_plan.md  osr-design.md  ppc_realtime_gate_existing_outputs.md  ppc_reproduction.md  ppc_smoother_oracle_report.md  ppc_tokyo_run1_coverage_bad_segments.csv  ppc_tokyo_run1_coverage_quality.json  ppc_tokyo_run1_float_bridge_tail_quality.json  ppc_wrong_fix_residual_analysis.md  quickstart.md  research_quickstart.md  rinex4_plan.md  robotics_quickstart.md  rtk_tuning_gates.md  ssr2obs_dump_implementation.md  (+2 more)
examples/: CMakeLists.txt  example_vehicle_animation.cpp  rtk_positioning.cpp  simple_spp.cpp  simple_test.cpp
examples/positioning/: spp_positioning  spp_positioning.cpp
model/: drone.dae
notes/: 2026-04-17_rtk_177057_early_divergence_plan.md  2026-04-17_rtk_demo5_final_status.md  2026-04-17_rtk_experimental_pr_handoff_plan.md  2026-04-17_rtk_preserve_lineage_seed_plan.md  2026-04-17_rtk_preserve_net_effect_ab_plan.md  2026-04-17_rtk_preserve_threshold_sweep_plan.md  2026-04-17_rtk_run2_lineage_guard_ab_plan.md  2026-04-17_rtk_run2_lineage_plan.md  rtk_dual_freq_findings.md
output/: RTK_POSITIONING_REPORT.md  convert_rtklib_to_kml.py  rtk_solution.kml  rtk_solution.pos  rtklib_rtk_result.kml  rtklib_rtk_result.pos  visualize_rtk.py
python/: CMakeLists.txt
python/libgnsspp/: __init__.py  artifacts.py  bindings.cpp
ros2/: CMakeLists.txt  gnss_solution_node.cpp
ros2/gnss_raw_driver/: CMakeLists.txt  README.md  package.xml
ros2/gnss_raw_driver/config/: default.yaml
ros2/gnss_raw_driver/launch/: gnss_raw_driver.launch.py
ros2/gnss_raw_driver/msg/: GnssRawEpoch.msg  GnssRawObservation.msg
ros2/gnss_raw_driver/src/: gnss_bag_processor_node.cpp  gnss_raw_driver_node.cpp
scripts/: analyze_ppc_coverage_quality.py  analyze_ppc_dual_profile_selector_matrix.py  analyze_ppc_imu_bridge_targets.py  analyze_ppc_imu_coverage.py  analyze_ppc_multi_candidate_selector_matrix.py  analyze_ppc_profile_segment_delta.py  analyze_ppc_residual_reset_sweep.py  analyze_ppc_segment_selector_leave_one_run_out.py  analyze_ppc_segment_selector_loro_blind.py  analyze_ppc_segment_selector_loro_blind_pandas.py  analyze_ppc_segment_selector_loro_blind_stream.py  analyze_ppc_segment_selector_loro_learned.py  analyze_ppc_segment_selector_sweep.py  analyze_ppc_wrong_fix_residuals.py  analyze_rmse.py  analyze_stat_file.py  apply_ppc_dual_profile_selector.py  apply_ppc_multi_candidate_selector.py  apply_ppc_status_demotion.py  benchmark_fair_vs_claslib.sh  build_ppc_candidate_feature_table.py  compare_rmse_results.py  compare_rtk_results.py  compare_with_claslib.sh  convert_rtklib_pos.py  debug_osr_values.sh  debug_ssr_csv.py  dump_taroz_d_debug.m  dump_taroz_p_debug.m  (+38 more)
src/: gnss.cpp
tests/: CMakeLists.txt  rtklib2_sanity.cpp  run_regression.sh  test_artifact_manifest_contract_validator.py  test_artifact_manifest_ux.py  test_benchmark_scripts.py  test_ci_workflows.py  test_clas_a4b_native_selfdiff.py  test_clas_zd_component_diff.py  test_clas_zd_component_summary.py  test_claslib_osr_golden.py  test_claslib_osr_zd_export.py  test_claslib_parity_integration.py  test_claslib_parity_scripts.py  test_claslib_zd_component_export.py  test_clasnat_parity.cpp  test_cli_json_contract_validator.py  test_cli_tools.py  test_cli_ux.py  test_compare_ppp_tool.py  test_docs_site.py  test_experiment_runner.py  test_fgo.cpp  test_ginan_iers2010_vendor.cpp  test_gnss_dd_residuals_filtering.py  test_gnss_dd_residuals_html.py  test_gnss_dd_residuals_io.py  test_gnss_dd_residuals_records.py  test_gnss_dd_residuals_statistics.py  test_gnss_dd_residuals_summary.py  test_gnss_live.cpp  test_gnss_ppp_e2e.py  test_iers_earth_rotation.cpp  test_iers_eop.cpp  test_iers_ephemeris.cpp  test_iers_sub_daily_eop.cpp  test_iers_tides.cpp  test_kml.cpp  test_lambda.cpp  test_madoca_core.cpp  (+79 more)
tests/integration/: CMakeLists.txt  spp_validation.cpp
(+534 files in other folders)
